# async-protocol

./: Cargo.toml
src/: client_error.rs  client_receiver.rs  delayed_add.rs  dispatcher.rs  fifo_dispatcher.rs  generic_listening_server.rs  generic_server.rs  lib.rs  listening_server_error.rs  map_to_client_receive_error.rs  map_to_listening_server_server_error.rs  map_to_listening_server_service_error.rs  map_to_listening_server_transport_error.rs  map_to_server_send_error.rs  message_with_id.rs  multiplex_client.rs  multiplex_dispatcher.rs  multiplex_listening_server.rs  multiplex_server.rs  pipeline_client.rs  pipeline_listening_server.rs  pipeline_server.rs  ready_queue.rs  receiver.rs  request_sender.rs  server_error.rs  stream_of_future_results.rs
src/tcp/: generic_tcp_listener_server.rs  generic_tcp_server.rs  incoming_transports.rs  mod.rs  multiplex_tcp_client.rs  multiplex_tcp_listener_server.rs  multiplex_tcp_server.rs  pipeline_tcp_client.rs  pipeline_tcp_listener_server.rs  pipeline_tcp_server.rs  tcp_client_transport.rs
src/tests/common/: mod.rs  sink_stream.rs  slow_to_upper_service.rs  to_upper_service.rs
