[package]
name = "async-protocol"
version = "0.1.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]

[features]
tcp = ["tokio-io"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"

tokio-io = { version = "0.1", optional = true }
